# temp-logger-display

./: README.md  install.sh  logger_display.service  pyproject.toml
logger_display/: __init__.py  db.py  logger_server.py  plot.py
logger_display/static/: style.css
logger_display/templates/: base.html
logger_display/templates/plot/: index.html
