[project]
name = "logger-display"
version = "1.0.0"
description = "Temperature logger display web server"
dependencies = [
    "logger-display",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["logger-display"]